[package]
name = "DaedriVictus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clipboard = "0.5.0"
fltk = { version = "^1.4", features = ["fltk-bundled"] }
fltk-table = "0.3.1"
odbc = "0.17.0"
rand = "0.8.5"
sqlite = "0.31.1"
